tdf#151503 - Do not evaluate a missing optional variable to a boolean

Change-Id: I671f857344f91de63612eabcbbdb2cab9b94cc0d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141296
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit bdfcad586d7b1d4d26bcba50058af7fcb279558d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141318
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>