basic/qa/basic_coverage/test_optional_paramters_basic.bas
@@ -125,6 +125,12 @@ Sub verify_testOptionalsBasic()
     ' - Actual  : 448 (Actual value of the variable)
     TestUtil.AssertEqual(TestObjectError, 449, "TestObjectError")
 
+    ' tdf#151503 - error handling of missing optional parameters (boolean operations)
+    ' Without the fix in place, this test would have failed with:
+    ' - Expected: 449 (ERRCODE_BASIC_NOT_OPTIONAL - Argument not optional)
+    ' - Actual  : 0 (No error code since a missing parameter evaluates to true)
+    TestUtil.AssertEqual(TestBooleanOperations, 449, "TestBooleanOperations")
+
     Exit Sub
 errorHandler:
     TestUtil.ReportErrorHandler("verify_testOptionalsBasic", Err, Error$, Erl)
@@ -227,6 +233,15 @@ On Error GoTo errorHandler
     TestObjectError = optInt
 errorHandler:
     TestObjectError = Err()
+End Function
+
+Function TestBooleanOperations(Optional optBool As Boolean)
+On Error GoTo errorHandler
+    if optBool then
+        TestBooleanOperations = 0
+    end if
+errorHandler:
+    TestBooleanOperations = Err()
 End Function
 
 Function CollectionSum(C)
